# mzcore

./: .gitignore  CITATION.cff  Cargo.toml  README.md  clippy.toml  rendered_glycans.html  rustfmt.toml  size_history.md
examples/de-novo-align/: Cargo.toml  README.md
examples/de-novo-align/src/: main.rs
examples/ion-explorer/: Cargo.toml  README.md  figure.r
examples/ion-explorer/src/: main.rs
examples/multi-annotator/: Cargo.toml  README.md  test-out.csv  test.csv
examples/multi-annotator/src/: main.rs
examples/peptidoform-file-converter/: Cargo.toml  README.md
examples/peptidoform-file-converter/src/: main.rs
fuzz/: Cargo.toml  README.md  fuzz.rs
fuzz/fuzz_targets/: mzpaf.rs  mzspeclib.rs  mztab.rs  peaks.rs  pro_forma.rs  sloppy_pro_forma.rs  smiles.rs
fuzz/in_mzpaf/: 0  1  2  3  4
fuzz/in_mzspeclib/: chinese_hamster_hcd_selected_head.mzSpecLib.txt  fetal_brain_tiny.mzspeclib.txt
fuzz/in_mztab/: 0  1  10  11  12  13  14  17  2  3  4  5  6  7  8  9
fuzz/in_pro_forma/: 16  17  18  19  20  21  22
fuzz/in_smiles/: 0  1  10  11  12  14  15  16  18  2  3  8  9
imgt/: Cargo.toml  README.md
imgt-update/: Cargo.toml
imgt-update/src/: main.rs
imgt/src/: combine.rs  cv.rs  fancy.rs  germlines.md  imgt_gene.rs  lib.rs  parse.rs  regions.rs  select.rs  species.rs  structs.rs
imgt/src/germlines/: germlines.md
mzalign/: Cargo.toml  README.md
mzalign/src/: align_matrix.rs  align_type.rs  alignment.rs  bad_alignments.rs  consecutive.rs  diagonal_array.rs  helper_functions.rs  index.rs  lib.rs  mass_alignment.rs  multi.rs  multi_alignment.rs  piece.rs  scoring.rs  system.rs  test_alignments.rs
mzalign/src/matrices/: pam30ms.txt
mzalign/src/multi_alignment/: calculate.rs  mod.rs  structs.rs  tests.rs
mzalign/tests/: alignment.rs  pairwise_examples.csv
mzannotate/: Cargo.toml  README.md
mzannotate/src/: aminoacid.rs  fragmentation_tests.rs  glycan.rs  helper_functions.rs  lib.rs  modification.rs  monosaccharide.rs  peptidoform.rs
mzannotate/src/annotation/: ambiguous.rs  annotatable.rs  annotated.rs  fdr.rs  mod.rs  mzdata.rs  scores.rs  spectrum.rs
mzannotate/src/annotation/model/: built_in.rs  custom_models.rs  fragmentation.rs  glycan.rs  immonium_losses.md  json.rs  mod.rs  parameters.rs  possible_ions.rs
mzannotate/src/fragment/: fragment.rs  fragment_type.rs  maxquant.rs  mod.rs  position.rs
mzannotate/src/fragment/mzpaf/: mod.rs  read.rs  test.rs  write.rs
mzannotate/src/mzspeclib/: analyte.rs  attr.rs  attribute.rs  description.rs  header.rs  interpretation.rs  mod.rs  model.rs  parse.rs  protein_description.rs  read.rs  spectrum_description.rs  write.rs
mzannotate/src/spectrum/: mgf.rs  mod.rs  peak.rs  peaks.rs  raw.rs  spectrum.rs
mzannotate/tests/: mzspeclib.rs
mzcore/: Cargo.toml  README.md
mzcore-rs/: Cargo.toml
mzcore-rs/src/: lib.rs
mzcore-rs/src/chemistry/: amino_acid.rs  api.rs  atom.rs  composition.rs  constants.rs  element.rs  glycan.rs  isotope.rs  mod.rs  peptide.rs  ptm.rs  table.rs  unimod.rs
mzcore-rs/src/common/error/: context.rs  custom_error.rs  (+2 more)
mzcore-rs/src/ms/: mass_calc.rs  mod.rs  spectrum.rs  utils.rs
mzcore-rs/src/msms/: annotator.rs  fragmentation.rs  mod.rs  model.rs
mzcore-update/: Cargo.toml
mzcore-update-ontologies/: Cargo.toml
mzcore-update-ontologies/src/: main.rs
mzcore-update/data/: RESID.xml
mzcore-update/src/: main.rs
mzcore/src/: csv.rs  helper_functions.rs  isobaric_sets.rs  lib.rs  ontology.rs  parse_json.rs  space.rs  system.rs
mzcore/src/chemistry/: charge.rs  element.rs  isotopes.rs  mass_mode.rs  mod.rs  molecular_charge.rs  neutral_loss.rs
mzcore/src/glycan/: attachment.rs  composition.rs  glycan.rs  glycan_structure.rs  lists.rs  mod.rs  monosaccharide.rs  position.rs  positioned_structure.rs  wurcs.rs
mzcore/src/ontology/: custom.rs  gnome.rs  mod.rs  ontologies.rs  ontology.rs  ontology_modification.rs  psimod.rs  resid.rs  unimod.rs  xlmod.rs
mzcore/src/quantities/: mod.rs  multi.rs  tolerance.rs
mzcore/src/sequence/: checked_aminoacid.rs  cross_link.rs  custom_modifications_2024.json  custom_modifications_20250207.json  mod.rs  modification.rs  placement_rule.rs  protease.rs  sequence_element.rs  sequence_position.rs  simple_modification.rs
mzcv/: Cargo.toml  README.md  todo.md
mzcv/examples/: imgt.rs  ms.rs
mzcv/src/: curie.rs  cv_error.rs  cv_index.rs  cv_source.rs  hash_buf_reader.rs  lib.rs  load.rs  obo.rs  text.rs
mzcv/src/lzw/: lzw.rs  mod.rs
mzcv/tests/: obo.rs
mzident/: Cargo.toml  README.md
mzident/src/: annotated_spectrum.rs  common_parser.rs  csv.rs  file_format.rs  general.rs  helper_functions.rs  identified_peptidoform.rs  lib.rs  metadata.rs  mztab_writer.rs  peaks_family_id.rs  protein_metadata.rs  psm.rs  psm_metadata.rs  source.rs  spectrum_id.rs  test.rs
mzident/src/formats/: basic_csv.rs  deepnovofamily.rs  deepnovofamily_tests.rs  fasta.rs  instanovo.rs  instanovo_tests.rs  maxquant.rs  maxquant_tests.rs  metamorpheus.rs  metamorpheus_tests.rs  mod.rs  msfragger.rs  msfragger_tests.rs  mztab.rs  mztab_crashes.rs  mztab_test.rs  novob.rs  novob_tests.rs  novor.rs  novor_tests.rs  opair.rs  opair_tests.rs  peaks.rs  peaks_tests.rs  pepnet.rs  pepnet_tests.rs  pihelixnovo.rs  pihelixnovo_tests.rs  piprimenovo.rs  piprimenovo_tests.rs  plgs.rs  plgs_tests.rs  plink.rs  plink_tests.rs  powernovo.rs  powernovo_tests.rs  proteoscape.rs  proteoscape_tests.rs  punifind.rs  punifind_tests.rs  (+4 more)
mzident/src/identification/: common_parser.rs  file_format.rs  general.rs  identified_peptidoform.rs  metadata.rs  mod.rs  source.rs  test.rs
mzident/src/peaks_fuzz_tests/: crash_1
mzident/src/test_files/: plgs_v3.0_peptide.csv  plink_v2.3_small.csv
rustyms-generate-databases/: Cargo.toml
rustyms-generate-databases/src/: atomic_masses.rs  gnome.rs  main.rs  obo.rs  ontology_modification.rs  psi_mod.rs  resid.rs  unimod.rs  unimod_xml.rs  xlmod.rs
rustyms-generate-imgt/: Cargo.toml
rustyms-generate-imgt/src/: combine.rs  imgt_gene.rs  main.rs  parse.rs  structs.rs
rustyms-py/: Cargo.toml
rustyms-py/src/: lib.rs
(+339 files in other folders)
