[workspace]
members = [
    "rustyms",
    "rustyms-generate-databases",
    "rustyms-generate-imgt",
    "rustyms-py",
    "fuzz",
    "examples/*",
]
resolver = "2"
package.authors = [
    "Douwe Schulte <d.schulte@uu.nl>",
    "Ralf Gabriels",
    "Auke Heerdink",
]
package.edition = "2024"
package.license = "MIT OR Apache-2.0"
package.rust-version = "1.85.0"
package.version = "0.10.0"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
# Bench profile inherits from release so only change the release settings

[workspace.dependencies]
afl = "0.15"
base64 = "0.22"
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
directories = "6.0"
flate2 = "1.0"
iai-callgrind = "0.14"
itertools = "0.14"
mzdata = {version="0.53", default-features = false, features = ["miniz_oxide"]}
ndarray = "0.16"
ordered-float = { version = "5.0", features = ["serde"] }
png = "0.17"
probability = "0.20"
pyo3 = "0.25"
rand = "0.9"
rayon = "1.10"
regex = "1.11"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
similar = "2.7"
swash = "0.2"
thin-vec = { version = "0.2", features = ["serde"] }
uom = { version = "0.37", default-features = false, features = ["use_serde", "usize", "isize", "f64"] }
zeno = {version = "0.3.2" }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
ambiguous-glob-reexports = "deny"
clashing-extern-declarations = "deny"
const-item-mutation = "deny"
dangling-pointers-from-temporaries = "deny"
deref-nullptr = "deny"
drop-bounds = "deny"
future-incompatible = "deny"
hidden-glob-reexports = "deny"
improper-ctypes = "deny"
improper-ctypes-definitions = "deny"
invalid-from-utf8 = "deny"
invalid-macro-export-arguments = "deny"
invalid-nan-comparisons = "deny"
invalid-reference-casting = "deny"
invalid-value = "deny"
keyword-idents = "warn"
let-underscore = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing_docs = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
noop-method-call = "warn"
opaque-hidden-inferred-bound = "deny"
overlapping-range-endpoints = "deny"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single-use-lifetimes = "warn"
suspicious-double-ref-op = "deny"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unconditional-recursion = "deny"
unexpected_cfgs = { level = "allow", check-cfg = [
    "cfg(f32)",
    "cfg(github_action)",
    "cfg(si)",
] }
unnameable-test-items = "deny"
unreachable-pub = "deny"
unsafe-op-in-unsafe-fn = "deny"
unstable-syntax-pre-expansion = "deny"
unused = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
too_long_first_doc_paragraph = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
