[package]
name = "imgt-update"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
mzcv = { path = "../mzcv", features=["http"] }
imgt = { path = "../imgt", features = [
    "internal-no-data",
] }
itertools = {workspace = true}
context_error = { workspace = true, features = ["colored"] }

[lints]
workspace = true
