[package]
name = "imgt"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version.workspace = true
description = "A library to handle proteomic mass spectrometry data and match peptides to spectra."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["spectra", "mass-spectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/snijderlab/rustyms"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore" }

context_error = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
bincode = { workspace = true }
similar = { workspace = true }

[features]
default = []
internal-no-data = []
coloured-errors = ["context_error/colored"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = ["rayon"]