[package]
name = "imgt"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version = "0.1.0"
description = "Access the IMGT database from Rust"
categories = ["science::bioinformatics::sequence-analysis"]
keywords = ["antibodies", "bio"]
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore", version = "0.1.0" }
mzcv = { path = "../mzcv", version = "0.1.0" }

bincode = { workspace = true }
context_error = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
internal-no-data = []
coloured-errors = ["context_error/colored"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["rayon"]
