[package]
name = "mzalign"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version.workspace = true
description = "A library to handle proteomic mass spectrometry data and match peptides to spectra."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["spectra", "mass-spectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/snijderlab/rustyms"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore" }
imgt = { path = "../imgt", default-features = false, optional = true }

itertools = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
mzident = { path = "../mzident" }

[features]
default = []
rayon = ["dep:rayon", "imgt/rayon"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = ["rayon", "imgt"]