[package]
name = "mzalign"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version = "0.1.1"
description = "Align peptidoforms while with mass-based alignment."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["mass-spectrometry", "bio", "sequence-alignment"]
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore", version = "0.1.1" }
mzcv = { path = "../mzcv", version = "0.2.0" }
imgt = { path = "../imgt", version = "0.1.0", default-features = false, optional = true }

itertools = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
mzident = { path = "../mzident" }
context_error = { workspace = true }

[features]
default = []
rayon = ["dep:rayon", "imgt/rayon"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["rayon", "imgt"]
