[package]
name = "mzannotate"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version.workspace = true
description = "A library to handle proteomic mass spectrometry data and match peptides to spectra."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["spectra", "mass-spectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/snijderlab/rustyms"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore" }

context_error = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
mzdata = { workspace = true }
ordered-float = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uom = { workspace = true }

[features]
coloured-errors = ["context_error/colored"]

[lints]
workspace = true
