[package]
name = "mzannotate"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version = "0.1.0"
description = "Handle fragmentation of (complex) peptidoforms."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["spectra", "mass-spectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore", version = "0.1.0" }

context_error = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
mzdata = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thin-vec = { workspace = true }
uom = { workspace = true }

[features]
coloured-errors = ["context_error/colored"]

[lints]
workspace = true

[[test]]
name = "mzspeclib"
path = "tests/mzspeclib.rs"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]