[package]
name = "mzcore"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rusteomics"
repository = "https://github.com/rusteomics/mzcore/"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["bioinformatics", "mass spectrometry", "proteomics", "eubic-ms"]
categories = ["science"]
publish = false

[lib]
name = "mzcore"
#crate-type = ["cdylib"]

#[[bin]]
#name = "mzcore-sandbox"
#path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
fallible-iterator = "0.3.0"
fast-float = "0.2.0"
itertools = "0.11.0"
serde = { version = "*", features = ["derive","rc"] }
