[package]
name = "mzcore-update"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version = "0.1.0"
description = "Update the ontologies used in mzcore."
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcv = { path = "../mzcv", features = ["http"] }
mzcore = { path = "../mzcore", features = ["internal-no-data"] }
context_error = { workspace = true, features = ["colored"] }

[dev-dependencies]

[features]
default = []

[lints]
workspace = true
