[package]
name = "mzcore"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version = "0.1.1"
description = "Core logic for handling massspectrometry in Rust."
categories = [
    "science::bioinformatics::proteomics",
    "science::bioinformatics::sequence-analysis",
]
keywords = ["spectra", "mass-spectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcv = { path = "../mzcv", version = "0.2.0", features = ["serde"] }
bincode = { workspace = true, features = ["serde"] }
context_error = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true, optional = true }
ordered-float = { workspace = true }
probability = { workspace = true, optional = true }
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
swash = { workspace = true, optional = true }
thin-vec = { workspace = true }
uom = { workspace = true }
zeno = { workspace = true, optional = true }

[dev-dependencies]
base64 = { workspace = true }
directories = { workspace = true }
paste = { workspace = true }
png = { workspace = true }

[features]
default = []
isotopes = ["dep:probability", "dep:ndarray"]
glycan-render = []
glycan-render-bitmap = ["dep:zeno", "dep:swash", "glycan-render"]
search-index = ["mzcv/search-index"]
http = ["mzcv/http"]
internal-no-data = []
coloured-errors = ["context_error/colored"]

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["isotopes", "glycan-render-bitmap"]
