[package]
name = "mzident"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = true
rust-version.workspace = true
version = "0.1.0"
description = "Handle all kinds of identified peptidoform files."
categories = [
    "science::bioinformatics::proteomics",
]
keywords = ["spectra", "mass-spectrometry", "bio"]
repository = "https://github.com/rusteomics/mzcore"
readme = "README.md"
include = ["src/**/*", "images/**/*", "README.md", "benches/**/*"]

[dependencies]
mzcore = { path = "../mzcore", version = "0.1.0" }
mzannotate = { path = "../mzannotate", version = "0.1.0", optional = true }

context_error = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thin-vec = { workspace = true }
uom = { workspace = true }

[features]
default = ["mzannotate"]
coloured-errors = ["context_error/colored"]

[lints]
workspace = true
