[package]
name = "rustyms-generate-imgt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
bincode = { workspace = true }
itertools = { workspace = true }
mzcore = { path = "../mzcore", default-features = false, features = [
    "internal-no-data",
] }
mzalign = {path="../mzalign"}
imgt = { path = "../imgt", features = [
    "internal-no-data",
] }

[features]
rayon = []

[lints]
workspace = true
