[package]
name = "rustyms-py"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
name = "rustyms_py"
crate-type = ["cdylib"]

[dependencies]
context_error = { workspace = true }
ordered-float = { workspace = true }
pyo3 = { workspace = true }
mzcore = { path = "../mzcore", features=["isotopes"] }
mzalign = { path = "../mzalign" }
mzannotate = { path = "../mzannotate" }

[lints]
workspace = true
