[package]
name = "rustyms-py"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
version = "0.12.0"

[lib]
name = "rustyms_py"
crate-type = ["cdylib"]

[dependencies]
context_error = { workspace = true }
pyo3 = { workspace = true }
mzcore = { path = "../mzcore", features = ["isotopes"] }
mzalign = { path = "../mzalign" }
mzannotate = { path = "../mzannotate" }

[lints]
workspace = true
