[package]
name = "de-novo-align"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rustyms = { path = "../../rustyms", default-features=false, features = ["align", "identification", "rayon", "coloured-errors"] }
clap = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
