[package]
name = "de-novo-align"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mzcore = { path = "../../mzcore", default-features = false, features = [
    "coloured-errors",
] }
mzalign = { path = "../../mzalign", features = ["rayon"] }
mzident = { path = "../../mzident" }
clap = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
