[package]
name = "ion-explorer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
directories = { workspace = true }
itertools = { workspace = true }
mzdata = { workspace = true, features = ["mgf", "mzml", "thermo"] }
rustyms = { path = "../../rustyms", default-features = false, features = [
    "mzdata",
    "identification",
] }
serde_json = { workspace = true }
rayon = {workspace = true}

[lints]
workspace = true
