[package]
name = "ion-explorer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
itertools = { workspace = true }
mzdata = { workspace = true, features = ["mgf", "mzml", "thermo"] }
mzcore = { path = "../../mzcore", default-features = false, features = [
    "coloured-errors",
] }
mzident = { path = "../../mzident" }
mzannotate = { path = "../../mzannotate" }
rayon = { workspace = true }

[lints]
workspace = true
