[package]
name = "multi-annotator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
context_error = { workspace = true }
directories = { workspace = true }
itertools = { workspace = true }
mzdata = { workspace = true, default-features = false, features = [
    "mgf",
    "mzml",
    "thermo",
    "bruker_tdf",
] }
mzsignal = "1.0"
rayon = { workspace = true }
mzcore = { path = "../../mzcore", default-features = false, features = [
    "coloured-errors",
] }
mzannotate = { path = "../../mzannotate" }
mzident = { path = "../../mzident" }

[lints]
workspace = true
