[package]
name = "peptidoform-file-converter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
context_error = { workspace = true }
directories = { workspace = true }
rustyms = { path = "../../rustyms", default-features=false, features = ["identification", "coloured-errors"] }

[lints]
workspace = true
