[package]
name = "peptidoform-file-converter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
context_error = { workspace = true }
mzcore = { path = "../../mzcore", default-features = false, features = [
    "coloured-errors",
] }
mzident = { path = "../../mzident" }

[lints]
workspace = true
